--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pyairtable==3.2.0
 pydantic==2.12.0
 pydantic_core==2.41.1
 python-dotenv==1.1.1
+reportlab==3.6.13
 requests==2.32.5
 sniffio==1.3.1
 starlette==0.48.0
